fdo#62336 - fix horribly coupled table rendering code to not crash.

Change-Id: I7a6ee4dce338b7529fa7500bb0c8341a4f2ebc22